# MLOps_for_DevOps2025

./: .gitignore  99-allegro-sysctl.conf  99-clearml-sysctl.conf  Neo4j.cql  PostgreSQL.sql  README.md  apiserver.conf  create_dirs.sh  datasource.yml  init.sh  killem_all.sh  model_monitoring.md  mongo.js  pixi.toml  prometheus.yml  pyproject.toml  start.sh  stop.sh
docker/: compose-triton-intel.yaml  docker-common.yaml  docker-compose.yaml  prometheus.yml
docker/clearml_config/: apiserver.conf
docker/mlops-example/: 1.upload_dataset_twitter.ipynb  2.train_test_split.py  3.tf_idf.py  3.tf_idf_refactor.ipynb  4.bert_amazon.ipynb  4.bert_amazon.py  5.full_pipe.py  create_pipeline_default.py  data_prepare.py  full_pipe.py  model.pkl  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_task_init.py  upload_dataset.py
docker/mlops-example/data/: .gitignore
docker/mlops-example/data/prepared/: .gitignore
docker/mlops-example/data/processed/: .gitignore
docker/mlops-example/mlops_example/: preprocessing.py  visualisation.py
mlops/: pyproject.toml
mlops-example/: 1.upload_dataset.ipynb  2.train_test_split.py  5.full_pipe.py  full_pipe.py  pyproject.toml
mlops-example/data/prepared/: .gitignore
mlops-example/data/raw/: .gitignore
mlops/data/: load_dataset.py
mlops/pipelines/: data_prepare.py
mlops/pipelines/mlops/: __init__.py  preprocessing.py
mlops/tasks/: bert_amazon.py  tf_idf.py
streamlit_app/: Dockerfile  app.py  docker-compose-app.yml
