[project]
name = "mlops-example"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [ "clearml>=2.0.1,<3", "jupyter>=1.1.1,<2", "plotly>=6.2.0,<7", "plotly-express>=0.4.1,<0.5", "clearml-serving>=1.3.5,<2", "scikit-learn==1.2.2", "numpy==1.26.4", "pandas>=2.3.0,<3", "polars>=1.31.0,<2", "nltk>=3.9.1,<4", "pyarrow>=20.0.0,<21", "transformers>=4.53.0,<5", "quarto-cli>=1.7.32,<2"]
#dependencies = [ "clearml>=2.0.1,<3", "jupyter>=1.1.1,<2", "plotly>=6.2.0,<7", "plotly-express>=0.4.1,<0.5", "clearml-serving>=1.3.5,<2", "scikit-learn==1.2.2", "numpy==1.26.4", "pandas>=2.3.0,<3", "polars>=1.31.0,<2", "nltk>=3.9.1,<4", "pyarrow>=20.0.0,<21", "transformers>=4.53.0,<5", "torch>=2.7.1,<3", "quarto-cli>=1.7.32,<2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
mlops_example = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
